--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -38,6 +38,7 @@
 	--card-title-fw: 600;
 	--card-author-size: 0.7777777777777778rem;
 	--card-footer-mt:32px;
+  --card-image-bg:#fff;
 	--card-date-overlay-height:72px;
 	--card-date-overlay-width:80px;
 	--card-date-overlay-bg:#F2F7FC;
